--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,24 @@ letter-spacing: 0.02em;
 display: block;
 padding-top: 24px;
 padding-bottom: 24px;
+position: relative;
+}
+
+.nav-inline {
+    color: #404BBF;
+}
+
+.nav-inline::after {
+    content: '';
+    width: 48px;
+    height: 4px;
+    background-color: #404BBF;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    position: absolute;
+    border-radius: 2px;
 }
 
 .container-nav {
@@ -106,14 +124,13 @@ padding-bottom: 24px;
     gap: 40px;
 }
 
-.container-button {
-}
 
 .main {
 background-color: #2E2F42;
 padding: 188px 0 188px;
 display: flex;
-/* padding: 188px 472px 292px 472px; */
+background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office.jpg);
+background-size: cover;
 }
 
 .main-button {
@@ -159,6 +176,24 @@ margin-right: auto;
     overflow: hidden;
   }
 
+.logo-icon {
+    line-height: 0; 
+}
+
+.benefits-icon {
+    display: flex;
+    gap: 24px;
+}
+
+.icon-item {
+    border: 1px solid #8E8F99;
+    padding: 24px 100px;
+    background-color: #F4F4FD;
+    border-radius: 4px;
+    width: calc((100% - 72px) / 4);
+}
+
+
 .benefits-list {
 color: #2e2f42;
 font-size: 20px;
@@ -166,6 +201,7 @@ font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
 margin-bottom: 8px; 
+margin-top: 8px;
 }
 
 .benefits-list-item {
@@ -247,6 +283,24 @@ text-align: center;
     padding: 32px 0;
 }
 
+
+.social-link {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    padding-bottom: 32px;
+}
+
+.social-link-item {
+    border: 1px solid #4D5AE5;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+    padding: 12px;
+    stroke: #F4F4FD;
+    display: flex;
+}
+
+
 .portfolio {
 color: #2e2f42;
 font-size: 36px;
@@ -268,7 +322,7 @@ margin-bottom: 72px;
 
 .container-portfolio-list {
     width: calc((100% - 48px) / 3);
-    /* margin-bottom: 24px; */
+    overflow: hidden;
 }
 
 .container-portfolio-list-item {
@@ -278,19 +332,10 @@ margin-bottom: 72px;
 
 .container-text {
     border: 1px solid #e7e9fc;
-    /* padding-left: 16px;
-    padding-right: 16px; */
     padding: 32px 16px;
     border-top: none;
 }
 
-/* .container-text-list{
-border-right: 1px #E7E9FC solid;
-border-bottom: 1px #E7E9FC solid; 
-border-left: 1px #E7E9FC solid;
-padding-left: 16px;
-padding-right: 16px;
-} */
 
 .portfolio-list {
 color: #2E2F42;
@@ -311,6 +356,38 @@ letter-spacing: 0.02em;
 /* padding-bottom: 32px; */
 }
 
+.container-portfolio-list:hover .overlay {
+transform: translateY(0%);
+}
+
+.overlay-list {
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #4D5AE5;
+    width: 100%;
+    height: 100%;
+    padding: 40px 32px;
+    overflow: auto;
+    transform: translateY(100%);
+    transition: transform 250ms linear;
+}
+
+
+
+.overlay-item {
+    color: #F4F4FD;
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.02em;
+}
+
 .footer {
 background-color: #2E2F42;
 padding: 100px 0;
@@ -325,7 +402,7 @@ line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 display: inline-block;
-margin-bottom: 16px;
+/* margin-bottom: 16px; */
 }
 
 .logotype-footer {
@@ -344,12 +421,37 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 max-width: 264px;
-/* padding-top: 18px; */
-
+margin-top: 16px;
+margin-right: 0;
 }
 
-.container-footer {
-    /* padding: 140px 1020px 100px 156px; */
+.footer-link {
+    color: white;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.02em;
+}
+
+/* l+g */
+.footer-list {
+    display: flex;
+    line-height: 0; 
+    gap: 16px;
+}
+
+.footer-link-item {
+    padding-left: 540px;
+}
+
+.footer-icon {
+    border: 1px solid #4D5AE5;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+    padding: 16px;
+    stroke: #F4F4FD;
+    display: flex;
+    margin-top: 16px;
 }
 
 
