--- a/css/style.css
+++ b/css/style.css
@@ -137,9 +137,13 @@ padding: 188px 0 188px;
 display: flex;
 background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office.jpg);
 background-size: cover;
-max-width: 1440px;
-background-repeat: no-repeat;
-background-position: center;
+
+}
+
+.container-button {
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .main-button {
