--- a/css/style.css
+++ b/css/style.css
@@ -402,6 +402,7 @@ font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.02em; */
 /* padding-bottom: 32px; */
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-item {
@@ -416,7 +417,7 @@ letter-spacing: 0.02em; */
     height: 100%;
     width: 100%;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .container-portfolio-list:hover {
