--- a/css/style.css
+++ b/css/style.css
@@ -402,11 +402,11 @@ font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.02em; */
 /* padding-bottom: 32px; */
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .overlay-item {
-    position: absolute;
+    /* position: absolute;
     top: 0;
     font-size: 16px;
     line-height: 1.5;
@@ -417,7 +417,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     height: 100%;
     width: 100%;
     transform: translateY(100%);
-    /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .container-portfolio-list:hover {
@@ -440,20 +440,39 @@ transform: translateY(0%);
     background-color: #4D5AE5;
     width: 100%;
     height: 100%;
-    /* padding: 40px 32px;  */
     overflow: auto;
     transform: translateY(100%);
     transition: transform 250ms linear;
 }
 
+.overlay-list p {
+    color: #F4F4FD;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
 
 
 .overlay-item {
-    color: #F4F4FD;
+    /* color: #F4F4FD;
 font-size: 16px;
 font-weight: 400;
 line-height: 1.5;
-letter-spacing: 0.02em;
+letter-spacing: 0.02em; */
 }
 
 .footer-desing {
