--- a/css/style.css
+++ b/css/style.css
@@ -73,13 +73,13 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .nav-inline::after {
     content: '';
-    width: 48px;
+    width: 100%;
     height: 4px;
     background-color: #404BBF;
     display: block;
-    margin-left: auto;
+    /* margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
+    margin-top: 20px; */
     bottom: -1px;
     position: absolute;
     border-radius: 2px;
@@ -154,7 +154,8 @@ line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
 max-width: 496px;
-padding-bottom: 48px;
+margin-bottom: 48px;
+/* padding-bottom: 48px; */
 margin-left: auto;
 margin-right: auto;
 }
@@ -226,7 +227,7 @@ font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
 margin-bottom: 8px; 
-margin-top: 8px;
+/* margin-top: 8px; */
 }
 
 .benefits-list-item {
@@ -303,6 +304,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 text-align: center;
+margin-bottom: 8px;
 }
 
 .container-name {
@@ -314,19 +316,9 @@ text-align: center;
     display: flex;
     gap: 24px;
     justify-content: center;
-    /* padding-bottom: 32px; */
 }
 
 .social-link-item {
-    /* border: 1px solid #4D5AE5;
-    border-radius: 50%;
-    background-color: #4D5AE5;
-    padding: 12px;
-    stroke: #F4F4FD;
-    display: flex;
-    width: 40px;
-    height: 40px;  */
-    /* padding-bottom: 32px; */
     width: 40px;
     height: 40px;
 }
@@ -340,7 +332,6 @@ text-align: center;
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    margin-top: 8px;
 }
 
 .logo-social {
@@ -372,7 +363,6 @@ margin-bottom: 72px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .container-portfolio-list  */
 
 .overlay-item:hover {
     transform: translateY(0%);
