--- a/css/style.css
+++ b/css/style.css
@@ -137,12 +137,13 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .main {
 background-color: #2E2F42;
 padding: 188px 0 188px;
-display: flex;
+/* display: flex; */
 background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office.jpg);
 background-size: cover;
 max-width: 1440px;
 background-repeat: no-repeat;
 background-position: center;
+margin: auto;
 }
 
 .container-button {
